--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,8 @@
 audio {
   height: 50px;
-  display: none;
+  /* display: none; */
+  visibility: hidden;
+  position: absolute;
 }
 
 * {
@@ -9,6 +11,11 @@ audio {
 }
 body {
   margin: 0;
+}
+h1 {
+  text-align: center;
+  color: #bbb;
+  text-transform: uppercase;
 }
 ul {
   height: 18.875em;
