--- a/src/App.css
+++ b/src/App.css
@@ -22,8 +22,8 @@ h1 span{
   letter-spacing: 0;
 }
 footer{
-  position: fixed;
-  bottom: 0;
+  /* position: fixed;
+  bottom: 0; */
   background-color: #ffffff;
   width: 100%;
   padding: 25px;
@@ -117,3 +117,4 @@ ul li:first-child {
 ul li:last-child {
   border-radius: 0 0 5px 5px;
 }
+
