stop user from highlighting letter in li

--- a/src/App.css
+++ b/src/App.css
@@ -73,6 +73,12 @@ li {
   justify-content: center;
   align-items: flex-end;
   padding-bottom: 10px;
+
+  user-select: none; /* supported by Chrome and Opera */
+  -webkit-user-select: none; /* Safari */
+  -khtml-user-select: none; /* Konqueror HTML */
+  -moz-user-select: none; /* Firefox */
+  -ms-user-select: none; /* Internet Explorer/Edge */
 }
 .whiteKey {
   height: 16em;
