added no user select to ul for testing

--- a/src/App.css
+++ b/src/App.css
@@ -58,6 +58,12 @@ ul {
   position: relative;
   background-color: #000;
   border-radius: 22px;
+
+  user-select: none; /* supported by Chrome and Opera */
+  -webkit-user-select: none; /* Safari */
+  -khtml-user-select: none; /* Konqueror HTML */
+  -moz-user-select: none; /* Firefox */
+  -ms-user-select: none; /* Internet Explorer/Edge */
 }
 ul div{
   height: 10px;
