--- a/src/App.css
+++ b/src/App.css
@@ -6,6 +6,7 @@ html { -moz-box-sizing: border-box; -webkit-box-sizing: border-box; box-sizing: 
 
 body {
   margin: 0;
+  padding: 0;
 }
 
 h1 {
@@ -24,8 +25,6 @@ h1 span{
   letter-spacing: 0;
 }
 footer{
-  /* position: fixed;
-  bottom: 0; */
   background-color: #ffffff;
   width: 100%;
   padding: 25px;
@@ -101,16 +100,12 @@ li {
   background: linear-gradient(to bottom, #eee 0%, #fff 100%);
 }
 
-.whiteKey:active {
+.whiteKey.playing {
   background: linear-gradient(
     to right,
     rgb(243, 243, 243) 0%,
     rgb(206, 204, 204) 100%
   );
-}
-
-.whiteKey.playing {
-  background: #c02525;
 }
 
 .blackKey {
@@ -124,7 +119,7 @@ li {
   background: #444;
 }
 
-.blackKey:active {
+.blackKey.playing {
   background: linear-gradient(to right, #444 0%, #222 100%);
 }
 
