--- a/src/App.css
+++ b/src/App.css
@@ -28,6 +28,7 @@ footer{
   background-color: #ffffff;
   width: 100%;
   padding: 25px;
+  margin-top: 50px;
 }
 
 h3{
@@ -39,6 +40,10 @@ p{
   text-align: center;
   color: #bbb;
   padding-top: 40px;
+}
+
+.mobileInstructions{
+  display: none;
 }
 
 .wrapper{
@@ -59,9 +64,9 @@ a:hover{
 
 ul {
   height: 18.875em;
-  width: 30em;
-  margin: 3em auto;
-  padding: 3em 3em 0;
+  width: 548px;
+  margin: 6% auto;
+  padding: 60px 34px 0;
   position: relative;
   background-color: #000;
   border-radius: 22px;
@@ -70,6 +75,7 @@ ul {
 ul div{
   height: 10px;
   background-color: #c02525;
+  width: 480px;
 }
 
 li {
@@ -91,8 +97,8 @@ li {
 }
 
 .whiteKey {
-  height: 16em;
-  width: 3em;
+  height: 100%;
+  width: 60px;
   z-index: 1;
   border-left: 1px solid #bbb;
   border-bottom: 1px solid #bbb;
@@ -109,8 +115,8 @@ li {
 }
 
 .blackKey {
-  height: 10em;
-  width: 2em;
+  height: 65%;
+  width: 40px;
   margin: 0 0 0 -1em;
   z-index: 2;
   border: 1px solid #000;
@@ -146,5 +152,16 @@ ul li:last-child {
     -khtml-user-select: none; /* Konqueror HTML */
     -moz-user-select: none; /* Firefox */
     -ms-user-select: none; /* Internet Explorer/Edge */
+  }
+
+  .computerInstructions{
+    display: none;
+  }
+
+  .mobileInstructions{
+    display: block;
+    text-align: center;
+    color: #eee;
+    font-weight: bold;
   }
 }
